--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
   "engines": {
     "node": ">= 14.10.0"
   },
-  "dependencies": {
-  },
   "devDependencies": {
     "@types/node": "^17.0.35",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "db-migrate": "beta",
     "esbuild": "^0.14.43",
     "esbuild-node-tsc": "^1.8.6",
     "eslint": "^7.21.0",
@@ -34,6 +33,10 @@
     "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "db-migrate-pg": "^1.2.2"
+  },
+  "dependencies": {
+   
   }
 }
