--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "db-migrate": "beta",
+    "db-migrate-pg": "^1.2.2",
     "esbuild": "^0.14.43",
     "esbuild-node-tsc": "^1.8.6",
     "eslint": "^7.21.0",
@@ -33,10 +34,9 @@
     "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
-    "typescript": "^4.7.2",
-    "db-migrate-pg": "^1.2.2"
+    "typescript": "^4.7.2"
   },
   "dependencies": {
-   
+    "@elderjs/plugin-images": "1.8.0-beta.7"
   }
 }
